--- a/src/jade/index.jade
+++ b/src/jade/index.jade
@@ -157,11 +157,22 @@ block content
           | issues and provide an even better game.
 
       #team
-        h2 Team Members
-        
+        h2 The Hacker Experience Team
+
         .team-member
           .profile-img
-            img().img-responsive
+            img(src="/assets/img/team/profile_renato.jpg").img-responsive
+            .member-social
+              a(href="mailto:renato@hackerexperience.com"  target="_blank")
+                .fa.fa-envelope
+              a(href="tel:+14158004943"  target="_blank")
+                .fa.fa-phone
+              a(href="https://r.ena.to"  target="_blank")
+                .fa.fa-user
+              a(href="https://fb.com/renato.massaro"  target="_blank")
+                .fa.fa-facebook-square
+              a(href="https://twitter.com/RenatoMassaro"  target="_blank")
+                .fa.fa-twitter
           .profile-bio
             .member-name Renato Massaro
             .member-role CTO &amp; Developer
@@ -180,17 +191,42 @@ block content
                 | and 
                 em Fórum Internacional de Software Livre
                 | .
+        .team-member
+          .profile-img
+            img(src="/assets/img/team/profile_charlotte.jpg").img-responsive
             .member-social
-              a(href="mailto:renato@hackerexperience.com")
-                .fa.fa-envelope.fa-2x
-              a(href="tel:+14158004943")
-                .fa.fa-phone.fa-2x
-              a(href="https://r.ena.to")
-                .fa.fa-user.fa-2x
-              a(href="https://fb.com/renato.massaro")
-                .fa.fa-facebook-square.fa-2x
-              a(href="https://twitter.com/RenatoMassaro")
-                .fa.fa-twitter.fa-2x
+              a(href="mailto:mememori@hackerexperience.com"  target="_blank")
+                .fa.fa-envelope
+              a(href="https://virtualexodus.com"  target="_blank")
+                .fa.fa-user
+              a(href="https://github.com/mememori")
+                .fa.fa-github
+              a(href="https://twitter.com/the_mememori" target="_blank")
+                .fa.fa-twitter
+          .profile-bio
+            .member-name Charlotte Oliveira
+            .member-role Lead Developer
+            .member-bio
+              p
+                | Passionate backend developer with 8 years of experience with
+                | software development.
+              p
+                | Charlotte likes to talk about functional programming,
+                | distributed systems and game development
+        .team-member
+          .profile-img
+            img(src="/assets/img/team/profile_allan.jpg").img-responsive
+            .member-social
+              a(href="mailto:aj@hackerexperience.com" target="_blank")
+                .fa.fa-envelope
+              a(href="https://github.com/hails" target="_blank")
+                .fa.fa-github
+              a(href="https://twitter.com/noneisone" target="_blank")
+                .fa.fa-twitter
+          .profile-bio
+            .member-name Allan Jorge
+            .member-role Developer
+            .member-bio
       #featured
         h2 Featured in
         
