--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -8,7 +8,7 @@ $cooltrast: #512888;
 //
 $text-color: #4D4E53;
 
-$link-color: $cooltrast;
+$link-color: desaturate($cooltrast, 15%);
 
 $font-family-sans-serif: "Open Sans", "Helvetica",  sans-serif;
 $font-family-base: $font-family-sans-serif;
