--- a/src/jade/includes/layout.jade
+++ b/src/jade/includes/layout.jade
@@ -10,7 +10,7 @@ html(lang="en")
 
     block styles
       if env == "prod"
-        +stylesheet("https://fonts.googleapis.com/css?family=Open+Sans:400,700")
+        +stylesheet("https://fonts.googleapis.com/css?family=Open+Sans:400,700|Raleway:400")
       +stylesheet("assets/css/vendor.css")
       +stylesheet("assets/css/custom.css")
 
@@ -23,7 +23,7 @@ html(lang="en")
     include footer
 
     block scripts
-      if env == "prod"
+      //- if env == "prod"
         +javascript("https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js")
-      else
+      //- else
         +javascript("/assets/js/vendor/jquery.min.js")
