--- a/src/jade/index.jade
+++ b/src/jade/index.jade
@@ -4,7 +4,7 @@ include includes/metatags
 append styles
   +stylesheet("/assets/css/index.css")
 
-append scripts
+//- append scripts
   +javascript("/assets/js/index.js")
 
 block content
@@ -157,76 +157,8 @@ block content
           | issues and provide an even better game.
 
       #team
-        h2 The Hacker Experience Team
-
-        .team-member
-          .profile-img
-            img(src="/assets/img/team/profile_renato.jpg").img-responsive
-            .member-social
-              a(href="mailto:renato@hackerexperience.com"  target="_blank")
-                .fa.fa-envelope
-              a(href="tel:+14158004943"  target="_blank")
-                .fa.fa-phone
-              a(href="https://r.ena.to"  target="_blank")
-                .fa.fa-user
-              a(href="https://fb.com/renato.massaro"  target="_blank")
-                .fa.fa-facebook-square
-              a(href="https://twitter.com/RenatoMassaro"  target="_blank")
-                .fa.fa-twitter
-          .profile-bio
-            .member-name Renato Massaro
-            .member-role CTO &amp; Developer
-            .member-bio
-              p
-                | Creator of the Hacker Experience brand, Renato is a software
-                | developer and systems administrator.
-              p
-                | At work and on his free time, Renato loves messing around with
-                | distributed systems, operational systems, databases and
-                | theoretical computer science. 
-              p
-                | He is also a free software enthusiast and has spoken on some
-                | conferences in Brazil, including 
-                em Campus Party Brasil 
-                | and 
-                em Fórum Internacional de Software Livre
-                | .
-        .team-member
-          .profile-img
-            img(src="/assets/img/team/profile_charlotte.jpg").img-responsive
-            .member-social
-              a(href="mailto:mememori@hackerexperience.com"  target="_blank")
-                .fa.fa-envelope
-              a(href="https://virtualexodus.com"  target="_blank")
-                .fa.fa-user
-              a(href="https://github.com/mememori")
-                .fa.fa-github
-              a(href="https://twitter.com/the_mememori" target="_blank")
-                .fa.fa-twitter
-          .profile-bio
-            .member-name Charlotte Oliveira
-            .member-role Lead Developer
-            .member-bio
-              p
-                | Passionate backend developer with 8 years of experience with
-                | software development.
-              p
-                | Charlotte likes to talk about functional programming,
-                | distributed systems and game development
-        .team-member
-          .profile-img
-            img(src="/assets/img/team/profile_allan.jpg").img-responsive
-            .member-social
-              a(href="mailto:aj@hackerexperience.com" target="_blank")
-                .fa.fa-envelope
-              a(href="https://github.com/hails" target="_blank")
-                .fa.fa-github
-              a(href="https://twitter.com/noneisone" target="_blank")
-                .fa.fa-twitter
-          .profile-bio
-            .member-name Allan Jorge
-            .member-role Developer
-            .member-bio
+        include includes/index/team
+        
       #featured
         h2 Featured in
         
@@ -234,34 +166,4 @@ block content
         h2 Assets
         
       #contact
-        h2 Contact us
-        .row
-          .col-xs-6.links
-            h3 General
-            a(href="#") contact@hackerexperience.com
-            a(href="tel:18444225953" title="Toll free") 1 844-HACKEREXP
-            | 105 N First St #429 - San Jose, CA
-
-            h3 Media enquiries
-            a(href="#") press@hackerexperience.com
-            a(href="tel:18444225953" title="Toll free") 1 844-HACKEREXP
-            a(href="tel:14158004943") 1 415-800-4943
-
-          .col-xs-6
-            h3 Links
-            .links
-              a(href="https://hackerexperience.com") Official website
-              a(href="https://leaks.hackerexperience.com") Blog
-              a(href="https://letsbuildagame.org") Let's build a game
-              a(href="#") Crowdfunding campaign
-
-            h3 Social
-            .socialite
-              a(href="#")
-                .fa.fa-facebook-square.fa-3x
-              a(href="#")
-                .fa.fa-twitter.fa-3x
-              a(href="#")
-                .fa.fa-google-plus.fa-3x
-              a(href="#")
-                .fa.fa-github.fa-3x
+        include includes/index/contact
