--- a/src/jade/index.jade
+++ b/src/jade/index.jade
@@ -83,7 +83,7 @@ block content
         h2 Objectives &amp; Principles
         p
           | The people behind Hacker Experience have a not-so-secret agenda. 
-          a(href="#") See the full list.
+          a(href="#").strong-link See the full list.
 
         h3 Computer Science education
         p
@@ -111,9 +111,11 @@ block content
           | special interfaces crafted for them. 
         p
           | Ultimately, we want to give people like 
-          a(href="http://www.mirror.co.uk/news/uk-news/boy-11-says-first-words-96160") Jemil 
+          a(href="http://www.mirror.co.uk/news/uk-news/boy-11-says-first-words-96160").strong-link
+            | Jemil 
           | and 
-          a(href="http://www.bbc.com/news/disability-35705489") James 
+          a(href="http://www.bbc.com/news/disability-35705489").strong-link
+            | James 
           | the chance to play a game made for them. 
 
       #development
@@ -147,7 +149,8 @@ block content
         h2 History
         p
           | Hacker Experience 2 is based on 
-          a(href="https://legacy.hackerexperience.com") Hacker Experience 1 (HE1)
+          a(href="https://legacy.hackerexperience.com").strong-link
+            | Hacker Experience 1 (HE1)
           | , released on September 2014. It currently has around 500,000
           | players and an overall positive review.
         p
