--- a/src/jade/includes/index/fact_sheet.jade
+++ b/src/jade/includes/index/fact_sheet.jade
@@ -35,13 +35,13 @@ h1 Factsheet
 
 .fact
   .title: strong Final price
-  .description $30 one-off or $5/month
+  .description $25 one-off or $5/month
 
 .fact
   .title: strong Relevant links
   .description: ul
     li: a(href="https://hackerexperience.com.br") Game website
-    li: a(href="#") Crowdfunding
+    li: a(href="https://igg.me/at/hacker-experience") Crowdfunding
     li: a(href="https://letsbuildagame.org") Let's build a game
 
 .fact
