--- a/src/jade/includes/index/team.jade
+++ b/src/jade/includes/index/team.jade
@@ -2,7 +2,7 @@ h2 The Hacker Experience Team
 
 .team-member
   .profile-img
-    img(src="/assets/img/team/profile_renato.jpg").img-responsive
+    img(src="https://cdn.hackerexperience.com/team/renato.jpg").img-responsive
     .member-social
       a(href="mailto:renato@hackerexperience.com"  target="_blank")
         .fa.fa-envelope
@@ -34,12 +34,10 @@ h2 The Hacker Experience Team
         | .
 .team-member
   .profile-img
-    img(src="/assets/img/team/profile_charlotte.jpg").img-responsive
+    img(src="https://cdn.hackerexperience.com/team/charlotte.jpg").img-responsive
     .member-social
       a(href="mailto:mememori@hackerexperience.com"  target="_blank")
         .fa.fa-envelope
-      a(href="https://virtualexodus.com"  target="_blank")
-        .fa.fa-user
       a(href="https://github.com/mememori")
         .fa.fa-github
       a(href="https://twitter.com/the_mememori" target="_blank")
@@ -56,7 +54,7 @@ h2 The Hacker Experience Team
         | distributed systems and game development
 .team-member
   .profile-img
-    img(src="/assets/img/team/profile_allan.jpg").img-responsive
+    img(src="https://cdn.hackerexperience.com/team/allan.jpg").img-responsive
     .member-social
       a(href="mailto:aj@hackerexperience.com" target="_blank")
         .fa.fa-envelope
