--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -10,7 +10,7 @@
  */
 body {
   background-attachment: fixed;
-  background-image: url("http://s1.picswalls.com/wallpapers/2015/11/22/cyberpunk-wallpaper_102105675_292.jpg");
+  background-image: url("https://cdn.hackerexperience.com/bg/bg3.png");
   background-size: cover;
 }
 
