Update press kit content

--- a/src/jade/includes/index/team.jade
+++ b/src/jade/includes/index/team.jade
@@ -22,7 +22,7 @@ h2 The Hacker Experience Team
         | Creator of the Hacker Experience brand, Renato is a software
         | developer and systems administrator.
       p
-        | At work and on his free time, Renato loves messing around with
+        | At work and on his free time, Renato loves playing around with
         | distributed systems, operational systems, databases and
         | theoretical computer science. 
       p
@@ -65,4 +65,7 @@ h2 The Hacker Experience Team
   .profile-bio
     .member-name Allan Jorge
     .member-role Developer
-    .member-bio
+    .member-bio 
+      p
+        | Allan Jorge is a backend developer who loves programming language 
+        | theory, theory of computation and functional programming.
