Add missing press kit images

--- a/src/jade/includes/index/assets.jade
+++ b/src/jade/includes/index/assets.jade
@@ -1,15 +1,18 @@
 h2 Assets
 
 .trailer-video-container
-  img(src="http://placehold.it/900x600").img.img-responsive
+  img(src="https://jii.moe/N1lwxYXGW.jpg").img.img-responsive
 
 .photo-gallery
   .row
-    .col-xs-12.col-sm-6: img(src="http://placehold.it/900x600" data-lightbox="assets").img.img-responsive
-    .col-xs-12.col-sm-6: img(src="http://placehold.it/900x600").img.img-responsive
+    .col-xs-12.col-sm-6: img(src="https://jii.moe/4J-ntYmzb.svg" data-lightbox="assets").img.img-responsive
+    .col-xs-12.col-sm-6: img(src="https://jii.moe/Eyfo5YQf-.png").img.img-responsive
   .row
-    .col-xs-12.col-sm-6: img(src="http://placehold.it/900x600").img.img-responsive
-    .col-xs-12.col-sm-6: img(src="http://placehold.it/900x600").img.img-responsive
+    .col-xs-12.col-sm-6: img(src="https://c1.iggcdn.com/indiegogo-media-prod-cld/image/upload/c_fill,h_220,w_220/efc4r1xca5yk0imucr0n.jpg" data-lightbox="assets").img.img-responsive
+    .col-xs-12.col-sm-6: img(src="https://cdn.hackerexperience.com/igg/windows.png").img.img-responsive
   .row
-    .col-xs-12.col-sm-6: img(src="http://placehold.it/900x600").img.img-responsive
-    .col-xs-12.col-sm-6: img(src="http://placehold.it/900x600").img.img-responsive
+    .col-xs-12.col-sm-6: img(src="https://cdn.hackerexperience.com/igg/criminal_record.png").img.img-responsive
+    .col-xs-12.col-sm-6: img(src="https://cdn.hackerexperience.com/igg/missions.png").img.img-responsive
+  .row
+    .col-xs-12.col-sm-6: img(src="https://cdn.hackerexperience.com/igg/conn.png").img.img-responsive
+    .col-xs-12.col-sm-6: img(src="https://cdn.hackerexperience.com/igg/clan.png").img.img-responsive
